[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos-tunable"
version = "0.1.0"
description = "Tunable Chronos wrapper with explicit covariate handling."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch",
  "chronos==2.2.2",
  "huggingface_hub",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
